// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`layout should create a css fragment with the mapped props (including all props) 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  top: 10px;
  left: 10px;
  right: 10px;
  bottom: 10px;
  position: relative;
}

<div>
  <div
    class="emotion-0 emotion-1"
    display="flex"
  />
</div>
`;

exports[`layout should create a css fragment with the mapped props (partial) 1`] = `
.emotion-0 {
  top: 10px;
}

<div>
  <div
    class="emotion-0 emotion-1"
  />
</div>
`;
